src/test/deca/context/valid/created/assign-float-plus.deca
//Description :
// Test d'une assignation d'une addition entière dans un float
//
// Resultats :
//


{
    float b;
    b = 2 + 2;
}
