src/test/deca/context/invalid/created/null-int.deca
//Description :
// Test d'un entier null
//
// Resultats :
//  Erreur


{
    int a = null;
}